--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,319 +1,268 @@
-/*responsive styles*/
-
-.mobile {:display
-    display: none !important;
+.mobile {
+	: display display: none !important;
 }
 #social-icons, #logo {
-    width: 100%;
-    text-align: center;
+	width: 100%;
+	text-align: center;
 }
-/*background for services*/
-
 .bgpillars {
-    background: url("../images/background/bgpillars.jpg");
-    width: 100% !important;
-    min-height: 400px !important;
-    background-repeat: no-repeat;
-    background-size: cover;
-    /* overflow: -webkit-paged-y; */
+	background: url("../images/background/bgpillars.jpg");
+	width: 100% !important;
+	min-height: 400px !important;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
-/*background in homepage*/
-
 .bg {
-    background: url("../images/background/bbg1.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+	background: url("../images/background/bbg1.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 .Contactbg1 {
-    background: url("../images/background/bgcontact.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+	background: url("../images/background/bgcontact.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 .Pillarbg1 {
-    background: url("../images/background/bgpillar.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+	background: url("../images/background/bgpillar.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
 }
-/*end of background in homepage*/
-
-/*Images on every services Pillars*/
-
 #lead {
-    background: url(../images/background/pillars/bglead.png) no-repeat;
-    background-size: cover;
-    background-position: center;
+	background: url(../images/background/pillars/bglead.png) no-repeat;
+	background-size: cover;
+	background-position: center;
 }
 #backend {
-    background: url(../images/background/pillars/bgbackend.jpg) no-repeat;
-    background-size: cover;
-    background-position: center;
+	background: url(../images/background/pillars/bgbackend.jpg) no-repeat;
+	background-size: cover;
+	background-position: center;
 }
 #frontend {
-    background: url(../images/background/pillars/bgfrontend.jpg) no-repeat;
-    background-size: cover;
-    background-position: center;
+	background: url(../images/background/pillars/bgfrontend.jpg) no-repeat;
+	background-size: cover;
+	background-position: center;
 }
 #social {
-    background: url(../images/background/pillars/bgsocial.jpg) no-repeat;
-    background-size: cover;
-    background-position: center;
+	background: url(../images/background/pillars/bgsocial.jpg) no-repeat;
+	background-size: cover;
+	background-position: center;
 }
 #webdev {
-    background: url(../images/background/pillars/webdev1.jpg) no-repeat;
-    background-size: cover;
-    background-position: center;
+	background: url(../images/background/pillars/webdev1.jpg) no-repeat;
+	background-size: cover;
+	background-position: center;
 }
 #marketing {
-    background: url(../images/background/pillars/bgmarketing.jpg) no-repeat;
-    background-size: cover;
-    background-position: center;
+	background: url(../images/background/pillars/bgmarketing.jpg) no-repeat;
+	background-size: cover;
+	background-position: center;
 }
 #backcon {
-    background: url(../images/background/pillars/bgcontact.jpg) no-repeat;
-    background-position: center;
-    background-size: cover;
+	background: url(../images/background/pillars/bgcontact.jpg) no-repeat;
+	background-position: center;
+	background-size: cover;
 }
-/*end*/
-
 .icoo {
-    background: url("../Logo/DeegeelabLogo.png");
-    position: relative;
-    height: 80px;
-    width: 80px;
+	background: url("../Logo/DeegeelabLogo.png");
+	position: relative;
+	height: 80px;
+	width: 80px;
 }
 #modal_services .modal-content h1 {
-    font-size: 2.5rem;
-    text-align: center;
+	font-size: 2.5rem;
+	text-align: center;
 }
-
 p.label {
-    font-size: 15px;
+	font-size: 15px;
 }
-
 #modal_services .modal-content {
-    overflow: hidden;
+	overflow: hidden;
 }
 .s5ths, .m5ths, .l5ths, .xl5ths {
-    margin-left: auto;
-    left: auto;
-    right: auto;
+	margin-left: auto;
+	left: auto;
+	right: auto;
 }
 .row .col.s5ths {
-    width: 20%;
+	width: 20%;
 }
 @media only screen and (min-width: 601px) {
-    .row .col.m5ths {
-        width: 20%;
-    }
+	.row .col.m5ths {
+		width: 20%;
+	}
 }
 @media only screen and (min-width: 993px) {
-    .row .col.l5ths {
-        width: 20%;
-    }
+	.row .col.l5ths {
+		width: 20%;
+	}
 }
 @media only screen and (min-width: 1201px) {
-    .row .col.xl5ths {
-        width: 20%;
-    }
+	.row .col.xl5ths {
+		width: 20%;
+	}
 }
 #fullpage, #modal_services .modal-content {
-    /* position: absolute !important; */
-    width: 100% !important;
-    top: 0px;
+	width: 100% !important;
+	top: 0px;
 }
 #modal_services .modal-content {
-    position: relative !important;
-    width: 100% !important;
-    top: 0px;
+	position: relative !important;
+	width: 100% !important;
+	top: 0px;
 }
 #modal_services canvas {
-    position: absolute !important;
+	position: absolute !important;
 }
 /* fallback */
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/material-design-icons/material-icons.woff2) format('woff2');
-}
 
+@font-face {
+	font-family: 'Material Icons';
+	font-style: normal;
+	font-weight: 400;
+	src: url(../fonts/material-design-icons/material-icons.woff2) format('woff2');
+}
 .material-icons {
-    font-family: 'Material Icons';
-    font-weight: normal;
-    font-style: normal;
-    font-size: 24px;
-    line-height: 1;
-    letter-spacing: normal;
-    text-transform: none;
-    display: inline-block;
-    white-space: nowrap;
-    word-wrap: normal;
-    direction: ltr;
-    -webkit-font-feature-settings: 'liga';
-    -webkit-font-smoothing: antialiased;
+	font-family: 'Material Icons';
+	font-weight: normal;
+	font-style: normal;
+	font-size: 24px;
+	line-height: 1;
+	letter-spacing: normal;
+	text-transform: none;
+	display: inline-block;
+	white-space: nowrap;
+	word-wrap: normal;
+	direction: ltr;
+	-webkit-font-feature-settings: 'liga';
+	-webkit-font-smoothing: antialiased;
 }
 img.icondrop {
-    width: 100px;
+	width: 100px;
 }
 span.head {
-    font-size: 25px;
-    font-weight: 600;
+	font-size: 25px;
+	font-weight: 600;
 }
 /*Additional Css*/
 
 [data-collapse] {
-    display: none
+	display: none
 }
-
-.services-content{
-    min-height: 768px !important;
-    max-height: 768px;
-    /* overflow: scroll; */
+.services-content {
+	min-height: 768px !important;
+	max-height: 768px;
+	/* overflow: scroll; */
 }
-
-.paragraph tr td:nth-child(1){
-vertical-align:top;
+.paragraph tr td:nth-child(1) {
+	vertical-align: top;
 }
-
 @media (min-width: 994px) {
-    /* Desktop */
-    .services-content{
-        padding: 50px 50px 100px 50px !important;
-        overflow:scroll !important;
-    }
-    .service-banner{
-        min-height: 768px
-    }
-
-    td, th {
-        padding: 5px 5px !important;
-    }        
-
+	/* Desktop */
+	.services-content {
+		padding: 50px 50px 100px 50px !important;
+		overflow: scroll !important;
+	}
+	.service-banner {
+		min-height: 768px
+	}
+	td, th {
+		padding: 5px 5px !important;
+	}
 }
 @media (min-width: 602px) and (max-width: 993px) {
-    /* Tablet */
-
-    .service-banner{
-        min-height: 768px
-    }
-    .services-content{
-        padding: 50px 50px 100px 50px !important;
-        overflow:scroll !important;
-    }
-
-    td, th {
-        padding: 5px 5px !important;
-    }   
+	/* Tablet */
+	.service-banner {
+		min-height: 768px
+	}
+	.services-content {
+		padding: 50px 50px 100px 50px !important;
+		overflow: scroll !important;
+	}
+	td, th {
+		padding: 5px 5px !important;
+	}
 }
 @media (min-width: 320px) and (max-width: 601px) {
-    /* Smartphones */
-
-    .text{
-        top: 10% !important;
-    }
-    .text a {
-        top: 0px !important;
-    }
-
-    .left-border{
-        border-left:unset !important;
-    }
-
-    .top-border{
-        border-top: 1px #02bad0 solid !important;
-        margin-bottom:  100;
-        padding:unset !important;
-    }
-
-    .form_holder {
-        border-top: unset !important;
-    }
-
-    #form_query .col{
-        padding: unset !important;
-    }
-
-    input{
-        padding: unset !important;
-    }
-
-    .input-field.col label{
-        left:unset !important;
-    }
-
-    .node .title{
-        font-size:10px;
-    }
-
-    svg:not(:root) {
-        max-height: 200px !important;
-    }
-
-    .fullwidth{
-        overflow-x:scroll !important;
-    }
-    #footer ul {
-        margin: 10px !important;
-    }
-
-    #footer ul li{
-        margin-left:0px !important;
-        min-width: 0px !important;
-    }
-
-    #footer ul li img, .social-icons img{
-         width:30px !important;
-    }
-
-    #footer ul li a img{
-         display:none;
-    }
-
-    #footer ul li i{
-         font-size:10px !important;
-    }
-
-    #footer ul li span, #footer ul li a{
-         font-size:10px !important;
-         line-height: 24px;
-    }
-
-    #footer .right ul li{
-        top: -12px;
-        position: relative;
-    }
-
-
-    .form_holder .row{
-        margin-bottom: 0px !important;
-    }
-
-    .services-content{
-        min-height: 650px !important;
-/*         padding: 50px 50px 100px 50px !important; */
-/*         overflow:scroll !important; */
-    }
-
-    .service-banner{
-        height:150px !important;
-/*         min-height: 768px */
-    }
-
-    
-    td, th {
-        padding: 5px 5px !important;
-    }
-
-    .scroll{
-            padding-bottom: 70px !important;
-
-    }
-    .scroll .btn-round{
-        width: 100%;
-    text-align: center;
-    }
-
-    .fullwidth{
-        overflow:scroll !important;
-    }
+	/* Smartphones */
+	.text {
+		top: 10% !important;
+	}
+	.text a {
+		top: 0px !important;
+	}
+	.left-border {
+		border-left: unset !important;
+	}
+	.top-border {
+		border-top: 1px #02bad0 solid !important;
+		margin-bottom: 100;
+		padding: unset !important;
+	}
+	.form_holder {
+		border-top: unset !important;
+	}
+	#form_query .col {
+		padding: unset !important;
+	}
+	input {
+		padding: unset !important;
+	}
+	.input-field.col label {
+		left: unset !important;
+	}
+	.node .title {
+		font-size: 10px;
+	}
+	svg:not(:root) {
+		max-height: 200px !important;
+	}
+	.fullwidth {
+		overflow-x: scroll !important;
+	}
+	#footer ul {
+		margin: 10px !important;
+	}
+	#footer ul li {
+		margin-left: 0px !important;
+		min-width: 0px !important;
+	}
+	#footer ul li img, .social-icons img {
+		width: 30px !important;
+	}
+	#footer ul li a img {
+		display: none;
+	}
+	#footer ul li i {
+		font-size: 10px !important;
+	}
+	#footer ul li span, #footer ul li a {
+		font-size: 10px !important;
+		line-height: 24px;
+	}
+	#footer .right ul li {
+		top: -12px;
+		position: relative;
+	}
+	.form_holder .row {
+		margin-bottom: 0px !important;
+	}
+	.services-content {
+		min-height: 650px !important;
+	}
+	.service-banner {
+		height: 150px !important;
+	}
+	td, th {
+		padding: 5px 5px !important;
+	}
+	.scroll {
+		padding-bottom: 70px !important;
+	}
+	.scroll .btn-round {
+		width: 100%;
+		text-align: center;
+	}
+	.fullwidth {
+		overflow: scroll !important;
+	}
 }
