--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1008,8 +1008,7 @@ ul.skills {
 }
 
 .node .title{
-   min-width:100px;
-   min-height: 30px;
+   width:150px;
    background: rgba(0, 0, 0, 0.8);
    padding:5px;
    color: #fff;
