--- a/assets/css/svg.css
+++ b/assets/css/svg.css
@@ -8,12 +8,18 @@ svg circle.st1 {
 	stroke-width: 0;
 	stroke: transparent;
 }*/
-svg circle.st1 {
+svg circle.fill-white {
 	fill: #f9f9f9;
-	stroke: #000000;
 	stroke-width: 0.25;
 	stroke-miterlimit: 10;
 }
+
+svg circle.fill-blue {
+	fill: #02bad0;
+	stroke-width: 0.25;
+	stroke-miterlimit: 10;
+}
+
 svg #svgg path.st0 {
 	fill: #02bad0;
 	stroke: #3c232300;
