--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1014,17 +1014,22 @@ ul.skills {
 }
 
 .node .description{
-    width: 0px;
-    height:0px;
+    width: 250px;
+    height:100px;
+    z-index: 1000;
     overflow:hidden;
+    opacity:0;
     box-sizing:content-box;
     text-align: left;
     position: absolute;
     z-index:1000;
     border-radius: 3px;
-    -webkit-transition: width 0.3s, width 0.3s; /* For Safari 3.1 to 6.0 */
-    transition: width 0.3s, width 0.3s;
-    z-index:  1000;
+    -webkit-transition: width 0.1s, width 0.1s; /* For Safari 3.1 to 6.0 */
+    transition: width 0.1s, width 0.1s;
+
+    transform-style: preserve-3d;
+    transition: all 0.3s linear;
+    transform: rotateX(180deg);
 }
 
 .node:hover .description, .node.active .description{
@@ -1032,6 +1037,9 @@ ul.skills {
     height:100px;
     background: #fff;
     padding: 5px;
+    opacity:1;
+    
+    transform: rotateX(0deg);
 }
 
 .node:hover .title, .node.active .title{
