--- a/assets/css/svg.css
+++ b/assets/css/svg.css
@@ -10,6 +10,8 @@ svg circle.fill-white {
 	fill: #f9f9f9;
 	stroke-width: 10;
 	stroke-miterlimit: 10;
+	-webkit-filter: drop-shadow(12px 12px 7px rgb(0, 0, 0));
+	/* filter: drop-shadow(12px 12px 7px rgba(0,0,0,0.5)); */
 }
 
 svg circle.fill-blue {
