Added why deegeelab;

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1083,7 +1083,7 @@ div[data-anchor="home"] .fp-tableCell{
 }
 
 .menu-left{
-    position:absolute;
+    position: fixed;
     top: 40%;
     left: 0%;
 }
