--- a/assets/css/svg.css
+++ b/assets/css/svg.css
@@ -41,3 +41,29 @@ svg #svgg path.st0 {
 .svg-pulse{
 	fill:transparent !important;
 }
+
+@-webkit-keyframes deegeelab-pulse {
+	0% {
+		-webkit-box-shadow: 0 0 0 0 rgba(2, 186, 208, 0.4);
+	}
+	70% {
+		-webkit-box-shadow: 0 0 0 30px rgba(2, 186, 208, 0);
+	}
+	100% {
+		-webkit-box-shadow: 0 0 0 0 rgba(2, 186, 208, 0);
+	}
+}
+@keyframes deegeelab-pulse {
+	0% {
+		-moz-box-shadow: 0 0 0 0 rgba(2, 186, 208, 0.4);
+		box-shadow: 0 0 0 0 rgba(2, 186, 208, 0.4);
+	}
+	70% {
+		-moz-box-shadow: 0 0 0 10px rgba(2, 186, 208, 0);
+		box-shadow: 0 0 0 10px rgba(2, 186, 208, 0);
+	}
+	100% {
+		-moz-box-shadow: 0 0 0 0 rgba(2, 186, 208, 0);
+		box-shadow: 0 0 0 0 rgba(2, 186, 208, 0);
+	}
+}
