--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -99,31 +99,27 @@ p.label {
 	text-shadow: 0px 0px 10px #000;
 }
 
-@-webkit-keyframes deegeelab-pulse {
-	0% {
-		-webkit-box-shadow: 0 0 0 0 rgba(2, 186, 208, 0.4);
-	}
-	70% {
-		-webkit-box-shadow: 0 0 0 30px rgba(2, 186, 208, 0);
-	}
-	100% {
-		-webkit-box-shadow: 0 0 0 0 rgba(2, 186, 208, 0);
-	}
+#why-deegeelab{
+	max-width: 600px;
+	margin: 0 auto;
+	padding: 10px 10px 0px 10px;
+	border: none;
+	background: rgba(0,0,0,0.5);
 }
-@keyframes deegeelab-pulse {
-	0% {
-		-moz-box-shadow: 0 0 0 0 rgba(2, 186, 208, 0.4);
-		box-shadow: 0 0 0 0 rgba(2, 186, 208, 0.4);
-	}
-	70% {
-		-moz-box-shadow: 0 0 0 10px rgba(2, 186, 208, 0);
-		box-shadow: 0 0 0 10px rgba(2, 186, 208, 0);
-	}
-	100% {
-		-moz-box-shadow: 0 0 0 0 rgba(2, 186, 208, 0);
-		box-shadow: 0 0 0 0 rgba(2, 186, 208, 0);
-	}
+
+#why-deegeelab .collapsible-header{
+	background:transparent !important;
+	border:none;
+	text-align: center;
 }
+
+#why-deegeelab .collapsible-body{
+	background:transparent !important;
+	border:none;
+	text-align: left;
+	padding-top: 0px;
+}
+
 
 @media only screen and (min-width: 601px) {
 	.row .col.m5ths {
