--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ main {
 h1, h2, h3, h4, h5 p {
     color: black !important;
     margin-bottom: 30px;
-    /* font-size: 50px; */
+    font-size: 50px;
     font-weight: normal;
     /* font-family: 'walkway_semiboldregular'; */
     line-height: 1.2;
