--- a/assets/css/svg.css
+++ b/assets/css/svg.css
@@ -38,6 +38,19 @@ svg #svgg path.st0 {
 	0% {-webkit-transform: scale(1.0); opacity: 1;}
 	100% {-webkit-transform: scale(2); opacity: 0;}
 }
+
+@-webkit-keyframes svg-zoom-in{       
+	0% {-webkit-transform: scale(1.0);}
+	90% {-webkit-transform: scale(1.5);}
+	100% {-webkit-transform: scale(1.4);}
+}
+
+@-webkit-keyframes svg-zoom-out{       
+	0% {-webkit-transform: scale(1.4);}
+	10% {-webkit-transform: scale(1.5);}
+	100% {-webkit-transform: scale(1.0);}
+}
+
 .svg-pulse{
 	fill:transparent !important;
 }
@@ -67,3 +80,4 @@ svg #svgg path.st0 {
 		box-shadow: 0 0 0 0 rgba(2, 186, 208, 0);
 	}
 }
+
