--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1042,7 +1042,7 @@ ul.skills {
     transform: rotateX(180deg);
 }
 
-.node.active .description{
+.node:hover .description, .node.active .description{
     width:250px;
     height:100px;
     background: #fff;
