--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -30,8 +30,8 @@
 	position:absolute;
 	top: 0px !important;
 	left:-10%;
-	width: 120%;
-	height: 120%;
+	width: 150%;
+	height: 150%;
 	/* z-index: 100; */
 }
 .contact-section {
@@ -225,6 +225,21 @@ span.head {
 }
 @media (min-width: 994px) {
 	/* Desktop */
+
+	#nodes .list .node{
+		position: absolute;    
+	}
+
+	#nodes{
+		position: relative;
+	}
+
+	#nodes, #nodes .list .node{
+		-webkit-transition: all 0.3s linear;
+		-moz-transition: all 0.3s linear;
+		transition: all 0.3s linear;
+	}
+
 	.services-content {
 		padding: 50px 30px 100px 30px !important;
 		/* overflow: scroll !important; */
