ipad pro responsive

--- a/assets/css/pillar.css
+++ b/assets/css/pillar.css
@@ -314,6 +314,10 @@ a {}
   height: 100%;
 }
 
+#display_ipad{
+  height: 100%;
+}
+
 #display_mobile .panel{
   position: relative;
   overflow: hidden;
