--- a/assets/css/pillar.css
+++ b/assets/css/pillar.css
@@ -142,9 +142,9 @@ html {
 /* --- TEXT --- */
 
 .text {
-  display: inline-block;
-  position: relative;
-  top: 37%;
+  /* display: inline-block; */
+  /* position: relative; */
+  /* top: 37%; */
   color:  white;
   text-align: center;
   text-shadow: 0px 0px 20px #000;
@@ -306,22 +306,18 @@ a {}
   }
 }*/
 
-#display_mobile{
-  height: 25%;
+/* #display_mobile{
+  height: 100%;
 }
 
 #display_tablet{
   height: 100%;
-}
-
-#display_ipad{
-  height: 100%;
-}
+} */
 
 #display_mobile .panel{
   position: relative;
   overflow: hidden;
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
 }
 
