--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,16 +191,6 @@ h4, h5, h6 {
 }
 /*Social Icons*/
 
-#footer {
-    position: fixed;
-    bottom: 0%;
-    height: 50px;
-    width: 100%;
-    padding: 5px;
-    color: #fff;
-    background-color: rgba(0, 0, 0, 0.8);
-    z-index:  10000;
-}
 #social-icons ul {
     padding: 0;
     margin: 0;
@@ -950,41 +940,27 @@ ul.skills {
     fill: black;
 }
 
-.form_holder{
-    border-top: #02bad0 5px solid; //#4a4949
-    max-width:900%;
-    max-width: 900px;
-}
 .left-border{
     border-left: 1px #02bad0 solid;    
 }
 
-#display_tagline{
-    font-size:50px !important;
-}
-
-.lab{
+.logo-color{
     color:#02bad0 !important;
-    font-size:50px;
-}
-
-.deegee{
-    color:#4a4949 !important;
-    font-size:50px;
 }
 
 .overlap-gradient{
-    width:100%;
-    height: 100%;
-    background: -moz-linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));;
-    background: -webkit-linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));;
-    background: linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
+	width:100%;
+	height: 100%;
+	background: -moz-linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));;
+	background: -webkit-linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));;
+	background: linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
 }
 
 .btn-round{
     border-radius: 20px !important;
     background:  #02bad0;
+    text-shadow: none;
 }
 
 #contact_bg{
@@ -992,25 +968,6 @@ ul.skills {
     background-size: cover;
     min-height: 300px;
     opacity:  0.6;
-}
-
-#footer ul li{
-    min-width: 40px;
-    margin-left:20px;
-    display:inline-block;
-    height: 0px;
-}
-
-#footer a{
-    line-height: 40px;
-}
-
-#footer ul{
-    margin: 0px;
-}
-
-#footer img.social-icons{
-    margin-right:10px;
 }
 
 .node .title{
@@ -1052,9 +1009,9 @@ ul.skills {
 }
 
 .svg-pulse.active{
-    -webkit-animation: svg-pulse 0.5s linear infinite;
-    transform-origin: center center;
-    fill: #ccc !important;
+	-webkit-animation: svg-pulse 0.5s linear infinite;
+	transform-origin: center center;
+	fill: #ccc !important;
 }
 
 .svg-animation-in{
@@ -1070,19 +1027,6 @@ ul.skills {
     fill: #ccc !important;
 }
 
-#display_tagline.loading{
-    margin:0 auto;
-    max-width: 800px;
-    z-index:  1000;
-}
-
-#display_tagline .progress{
-    display: none;
-}
-
-#display_tagline.loading .progress{
-    display: block;
-}
 #display_tagline .progress .determinate{
     /* width: 50%; */
     /* -webkit-transform: scaleX(2) !important; */
