--- a/assets/css/svg.css
+++ b/assets/css/svg.css
@@ -29,8 +29,11 @@ svg #svgg path.st0 {
 	-webkit-box-shadow: -5px -5px 5px #888 !important;
 }
 @media screen and (max-width: 420px) {
+	.loading svg:not(:root) {
+		height: 200px !important;
+	}
 	svg:not(:root) {
-		max-height: 250px;
+		height: 250px !important;
 	}
 }
 
