--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1114,3 +1114,149 @@ div[data-anchor="home"] .fp-tableCell{
 .enclosed .divider{
     margin-bottom: 20px !important;
 }
+
+.loading{
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  top: 20%;
+  left: 50%;
+}
+
+.logo{
+  transform: translate(50%, 50%) scale(0.1);
+  margin: auto;
+  animation: logo-appear 2s cubic-bezier(0.4, 0, 1, 1) infinite;
+  width: 100px;
+  height: 100px;
+}
+
+.container {
+  transform: translate(-50%, -50%);
+  margin: auto;    
+  /*filter: url('#goo');*/
+  animation: rotate-move 2s ease-in-out infinite;
+}
+
+.dot { 
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  background-color: #000;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.dot-6 {
+  background-color: #ffffff;
+  border:5px solid #02bad0;
+  animation: dot-6-move 2s ease infinite, index 6s ease infinite;
+}
+
+.dot-5 {
+  background-color: #02bad0;
+  border:5px solid #02bad0;
+  animation: dot-5-move 2s ease infinite, index 6s -4s ease infinite;
+}
+
+.dot-4 {
+  background-color: #ffffff;
+  border:5px solid #02bad0;
+  animation: dot-4-move 2s ease infinite, index 6s -2s ease infinite;
+}
+
+.dot-3 {
+  background-color: #ffffff;
+  border:5px solid #02bad0;
+  animation: dot-3-move 2s ease infinite, index 6s ease infinite;
+}
+
+.dot-2 {
+  background-color: #ffffff;
+  border:5px solid #02bad0;
+  animation: dot-2-move 2s ease infinite, index 6s -4s ease infinite;
+}
+
+.dot-1 {
+  background-color: #02bad0;
+  border:5px solid #02bad0;
+  animation: dot-1-move 2s ease infinite, index 6s -2s ease infinite;
+}
+
+
+/* Loading */
+@keyframes dot-6-move {
+  20% {transform: scale(1)}
+  45% {transform: translateY(18px) scale(.45)}
+  60% {transform: translateY(90px) scale(.45)}
+  80% {transform: translateY(90px) scale(.45)}
+  100% {transform: translateY(0px) scale(1)}
+}
+
+@keyframes dot-5-move {
+  20% {transform: scale(1)}
+  45% {transform: translate(-16px, -12px) scale(.45)}
+  60% {transform: translate(-80px, -60px) scale(.45)}
+  80% {transform: translate(-80px, -60px) scale(.45)}
+  100% {transform: translateY(0px) scale(1)}
+}
+
+@keyframes dot-4-move {
+  20% {transform: scale(1)}
+  45% {transform: translate(16px, -12px) scale(.45)}
+  60% {transform: translate(80px, -60px) scale(.45)}
+  80% {transform: translate(80px, -60px) scale(.45)}
+  100% {transform: translateY(0px) scale(1)}
+}
+
+@keyframes dot-3-move {
+  20% {transform: scale(1)}
+  45% {transform: translateY(-18px) scale(.45)}
+  60% {transform: translateY(-90px) scale(.45)}
+  80% {transform: translateY(-90px) scale(.45)}
+  100% {transform: translateY(0px) scale(1)}
+}
+
+@keyframes dot-2-move {
+  20% {transform: scale(1)}
+  45% {transform: translate(-16px, 12px) scale(.45)}
+  60% {transform: translate(-80px, 60px) scale(.45)}
+  80% {transform: translate(-80px, 60px) scale(.45)}
+  100% {transform: translateY(0px) scale(1)}
+}
+
+@keyframes dot-1-move {
+  20% {transform: scale(1)}
+  45% {transform: translate(16px, 12px) scale(.45)}
+  60% {transform: translate(80px, 60px) scale(.45)}
+  80% {transform: translate(80px, 60px) scale(.45)}
+  100% {transform: translateY(0px) scale(1)}
+}
+
+@keyframes rotate-move {
+  0% {opacity: 0;}
+  42% {opacity: 0;}
+  45% {opacity: 1;}
+  55% {transform: translate(-50%, -50%) rotate(90deg);}
+  80% {transform: translate(-50%, -50%) rotate(360deg); opacity: 1;}
+  90% {transform: translate(-50%, -50%) rotate(360deg);}
+  100% {opacity: 0;}
+}
+
+@keyframes logo-appear {
+  1% {transform: translate(-85%, 50%) scale(0); opacity: 0;}
+  20% {transform: translate(-85%, 50%) scale(1); opacity: 1;}
+  45% {transform: translate(-85%, 50%) scale(.45); opacity: 1;}
+  90% {transform: translate(-85%, 50%) scale(.45); opacity: 1;}
+  100% {transform: translate(-85%, 50%) scale(0); opacity:0;}
+}
+
+@keyframes index {
+  0%, 100% {display:none;}
+  33.3% {display:none;}
+  66.6% {display:none;}
+}
