--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -983,7 +983,6 @@ ul.skills {
 .node .description{
     width: 250px;
     height:100px;
-    z-index: 1000;
     overflow:hidden;
     opacity:0;
     box-sizing:content-box;
@@ -993,15 +992,14 @@ ul.skills {
     border-radius: 3px;
     -webkit-transition: width 0.1s, width 0.1s; /* For Safari 3.1 to 6.0 */
     transition: width 0.1s, width 0.1s;
-
     transform-style: preserve-3d;
     transition: all 0.3s linear;
     transform: rotateX(180deg);
 }
 
 .node:hover .description, .node.active .description{
-    width:250px;
-    height:100px;
+    /* width:250px; */
+    /* height:100px; */
     background: #fff;
     padding: 5px;
     opacity:1;
@@ -1055,6 +1053,8 @@ ul.skills {
 
 .node a{
     line-height: unset;
+    /* position: relative; */
+    /* left: 0px; */
 }
 
 div[data-anchor="home"] .fp-tableCell{
@@ -1133,7 +1133,7 @@ div[data-anchor="home"] .fp-tableCell{
 
 .container {
   transform: translate(-50%, -50%);
-  margin: auto;    
+  margin: auto;
   /*filter: url('#goo');*/
   animation: rotate-move 2s ease-in-out infinite;
 }
