--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1116,29 +1116,61 @@ div[data-anchor="home"] .fp-tableCell{
 }
 
 .loading{
-  width: 200px;
-  height: 200px;
-  position: absolute;
-  top: 20%;
-  left: 50%;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  vertical-align:  middle;
+  overflow:  hidden;
 }
 
 .logo{
-  transform: translate(50%, 50%) scale(0.1);
+  transform: translate(0%, 0%) scale(0.1);
   margin: auto;
   animation: logo-appear 2s cubic-bezier(0.4, 0, 1, 1) infinite;
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  vertical-align: middle;
 }
 
-.container {
-  transform: translate(-50%, -50%);
+.logo img{
+    width: 100px;
+    height: 100px;
+    iddle; */
+    display: block;
+    margin: auto;
+    display:  block;
+    vertical-align:  middle;
+    top: 0;
+    bottom:  0;
+    right: 0;
+    left: 0;
+    position: absolute;
+}
+
+.loading .container {
+  transform: translate(0%, 0%);
   margin: auto;
-  /*filter: url('#goo');*/
   animation: rotate-move 2s ease-in-out infinite;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position:  absolute;
 }
 
-.dot { 
+.dot {
   width: 70px;
   height: 70px;
   border-radius: 50%;
@@ -1241,18 +1273,18 @@ div[data-anchor="home"] .fp-tableCell{
   0% {opacity: 0;}
   42% {opacity: 0;}
   45% {opacity: 1;}
-  55% {transform: translate(-50%, -50%) rotate(90deg);}
-  80% {transform: translate(-50%, -50%) rotate(360deg); opacity: 1;}
-  90% {transform: translate(-50%, -50%) rotate(360deg);}
+  55% {transform: translate(0%, 0%) rotate(90deg);}
+  80% {transform: translate(0%, 0%) rotate(360deg);opacity: 1;}
+  90% {transform: translate(0%, 0%) rotate(360deg);}
   100% {opacity: 0;}
 }
 
 @keyframes logo-appear {
-  1% {transform: translate(-85%, 50%) scale(0); opacity: 0;}
-  20% {transform: translate(-85%, 50%) scale(1); opacity: 1;}
-  45% {transform: translate(-85%, 50%) scale(.45); opacity: 1;}
-  90% {transform: translate(-85%, 50%) scale(.45); opacity: 1;}
-  100% {transform: translate(-85%, 50%) scale(0); opacity:0;}
+  1% {transform: translate(0%, 0%) scale(0);opacity: 0;}
+  20% {transform: translate(0%, 0%) scale(1);opacity: 1;}
+  45% {transform: translate(0%, 0%) scale(.45);opacity: 1;}
+  90% {transform: translate(0%, 0%) scale(.45);opacity: 1;}
+  100% {transform: translate(0%, 0%) scale(0);opacity:0;}
 }
 
 @keyframes index {
