--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -446,7 +446,9 @@ span.head {
 
 	}	
 }
-@media (min-width: 320px) and (max-width: 601px) {
+/*Portrait orientation for mobile*/
+@media screen and (orientation:portrait) { 
+
 	/* Smartphones */
 	.service-menu .left a{
 		margin-left:0px;
@@ -582,9 +584,6 @@ span.head {
 	.form_holder{
 		position: relative;
 	}
-	#why-deegeelab{
-		display: none;
-	}
 	.text{
 		margin: auto;
 		top: 0;
@@ -612,4 +611,9 @@ span.head {
 	#nodes .list .node{
 		height: 50px;
 	}	
+}
+@media screen and (orientation:landscape) {
+	#nodes .list .title{
+		display: none;
+	}
 }	
